--- a/locale/es-PY.txt
+++ b/locale/es-PY.txt
@@ -31,20 +31,26 @@ video_39DB84AB_2388_69B3_41AE_FAEAE626E44B.label = Ipad 1
 video_39D1533A_2388_689D_41A3_00537397E9CF.label = Ipad 2
 video_39E7564E_2388_28F5_4185_765F5B4B905E.label = Ipad 3
 video_3A1DF098_2388_299D_41C0_A91EEB7B7C93.label = Ipad 4
+video_3F02163F_28D0_C385_419E_D5B696BC9AB0.label = gusanos ar
+video_3EDFDE00_28F0_C37B_4191_2344FBCB4970.label = intacta pantalla curva
 
 ### Video
-videolevel_3C538FB8_2388_379D_416C_29B965D86D66.url = media/video_34EFCFD0_2161_64BB_41BC_08AE865BFE90_es-PY.mp4
-videolevel_3C538FB8_2388_379D_416C_29B965D86D66.posterURL = media/video_34EFCFD0_2161_64BB_41BC_08AE865BFE90_poster_es-PY.jpg
-videolevel_3C7F03AB_2388_2FB3_41B8_CD3D63A06214.url = media/video_39D1533A_2388_689D_41A3_00537397E9CF_es-PY.mp4
-videolevel_3C7F03AB_2388_2FB3_41B8_CD3D63A06214.posterURL = media/video_39D1533A_2388_689D_41A3_00537397E9CF_poster_es-PY.jpg
-videolevel_3C69E026_2388_28B5_41BE_2AE956451B8B.url = media/video_39DB84AB_2388_69B3_41AE_FAEAE626E44B_es-PY.mp4
-videolevel_3C69E026_2388_28B5_41BE_2AE956451B8B.posterURL = media/video_39DB84AB_2388_69B3_41AE_FAEAE626E44B_poster_es-PY.jpg
-videolevel_3C7AB28E_2388_2875_41BE_663D9E2E38D7.url = media/video_39E7564E_2388_28F5_4185_765F5B4B905E_es-PY.mp4
-videolevel_3C7AB28E_2388_2875_41BE_663D9E2E38D7.posterURL = media/video_39E7564E_2388_28F5_4185_765F5B4B905E_poster_es-PY.jpg
-videolevel_3C65D16E_2388_28B5_4189_08FAD9267605.url = media/video_3A1DF098_2388_299D_41C0_A91EEB7B7C93_es-PY.mp4
-videolevel_3C65D16E_2388_28B5_4189_08FAD9267605.posterURL = media/video_3A1DF098_2388_299D_41C0_A91EEB7B7C93_poster_es-PY.jpg
-videolevel_3C54AFD1_2388_37EF_41AB_14616E5A7318.url = media/video_3B7899E4_21A1_AC9B_41BD_472E25F23211_es-PY.mp4
-videolevel_3C54AFD1_2388_37EF_41AB_14616E5A7318.posterURL = media/video_3B7899E4_21A1_AC9B_41BD_472E25F23211_poster_es-PY.jpg
+videolevel_3F6281FF_28D3_4085_41C2_A199795602AC.url = media/video_34EFCFD0_2161_64BB_41BC_08AE865BFE90_es-PY.mp4
+videolevel_3F6281FF_28D3_4085_41C2_A199795602AC.posterURL = media/video_34EFCFD0_2161_64BB_41BC_08AE865BFE90_poster_es-PY.jpg
+videolevel_3F7E92EA_28D3_408F_41A2_57ED1AB07EA3.url = media/video_39D1533A_2388_689D_41A3_00537397E9CF_es-PY.mp4
+videolevel_3F7E92EA_28D3_408F_41A2_57ED1AB07EA3.posterURL = media/video_39D1533A_2388_689D_41A3_00537397E9CF_poster_es-PY.jpg
+videolevel_3F7C7281_28D3_437D_41BA_B440CE7FE108.url = media/video_39DB84AB_2388_69B3_41AE_FAEAE626E44B_es-PY.mp4
+videolevel_3F7C7281_28D3_437D_41BA_B440CE7FE108.posterURL = media/video_39DB84AB_2388_69B3_41AE_FAEAE626E44B_poster_es-PY.jpg
+videolevel_3F7F42C4_28D3_40FA_41C1_2AD65A32C44D.url = media/video_39E7564E_2388_28F5_4185_765F5B4B905E_es-PY.mp4
+videolevel_3F7F42C4_28D3_40FA_41C1_2AD65A32C44D.posterURL = media/video_39E7564E_2388_28F5_4185_765F5B4B905E_poster_es-PY.jpg
+videolevel_3F7FF2A2_28D3_40BF_41A8_659A26613FFC.url = media/video_3A1DF098_2388_299D_41C0_A91EEB7B7C93_es-PY.mp4
+videolevel_3F7FF2A2_28D3_40BF_41A8_659A26613FFC.posterURL = media/video_3A1DF098_2388_299D_41C0_A91EEB7B7C93_poster_es-PY.jpg
+videolevel_3F7DD21C_28D3_4384_41B2_971C11DA2E10.url = media/video_3B7899E4_21A1_AC9B_41BD_472E25F23211_es-PY.mp4
+videolevel_3F7DD21C_28D3_4384_41B2_971C11DA2E10.posterURL = media/video_3B7899E4_21A1_AC9B_41BD_472E25F23211_poster_es-PY.jpg
+videolevel_3F7E330D_28D3_4185_4176_7622C9371282.url = media/video_3EDFDE00_28F0_C37B_4191_2344FBCB4970_es-PY.mp4
+videolevel_3F7E330D_28D3_4185_4176_7622C9371282.posterURL = media/video_3EDFDE00_28F0_C37B_4191_2344FBCB4970_poster_es-PY.jpg
+videolevel_3F79432E_28D3_4187_41C0_693D8A2337C2.url = media/video_3F02163F_28D0_C385_419E_D5B696BC9AB0_es-PY.mp4
+videolevel_3F79432E_28D3_4187_41C0_693D8A2337C2.posterURL = media/video_3F02163F_28D0_C385_419E_D5B696BC9AB0_poster_es-PY.jpg
 
 ### Video Subtitles
 
@@ -79,50 +85,50 @@ Button_1203FDB8_3106_001C_41B6_C9BE8EDD0DA9.label = Garden
 Button_0AEB5577_2D08_CE7B_41B6_192923248F4E_mobile.label = INFO >
 Button_0AEB5577_2D08_CE7B_41B6_192923248F4E.label = INFO >
 Button_0B73474A_2D18_CB95_41B5_180037BA80BC.pressedLabel = Inserdt Text
-Button_4C0CCCF8_5EE8_88BE_41D7_AE304B421CBB.label = LOREM IPSUM
 Button_062AF830_1140_E215_418D_D2FC11B12C47.label = LOREM IPSUM
+Button_4C0CCCF8_5EE8_88BE_41D7_AE304B421CBB.label = LOREM IPSUM
 Button_2A2DE53B_310E_001C_41BB_C7AB6950A4DD.label = Lobby
 Button_2A2DE53B_310E_001C_41BB_C7AB6950A4DD_mobile.label = Lobby
 Button_1757AD7D_31FA_0015_41C7_FB79F56FA149.label = Lorem Ipsum
-Button_159E8DDD_31FA_0014_41C5_F18F441AF371.label = Lorem Ipsum
-Button_159ECDDC_31FA_0014_41B9_2D5AB1021813.label = Lorem Ipsum
-Button_17564D7D_31FA_0015_41B8_A9191CD56C52.label = Lorem Ipsum
-Button_159EBDDD_31FA_0014_41C8_935504B30727.label = Lorem Ipsum
-Button_17566D7D_31FA_0015_41AD_98D7C60C694F.label = Lorem Ipsum
 Button_17565D7D_31FA_0015_4193_78BBCB2DC70F.label = Lorem Ipsum
+Button_17564D7D_31FA_0015_41B8_A9191CD56C52.label = Lorem Ipsum
 Button_17564D7D_31FA_0015_41B8_A9191CD56C52.pressedLabel = Lorem Ipsum
 Button_17567D7D_31FA_0015_41C2_1E0D0AF05C7A.label = Lorem Ipsum
+Button_17566D7D_31FA_0015_41AD_98D7C60C694F.label = Lorem Ipsum
+Button_159EBDDD_31FA_0014_41C8_935504B30727.label = Lorem Ipsum
+Button_17560D7D_31FA_0015_41C4_7F0EC7540CC2.label = Lorem Ipsum
+Button_17562D7D_31FA_0015_41A3_96B282B30DBA.label = Lorem Ipsum
 Button_1756DD7D_31FA_0015_41A5_988B67FCF8B7.label = Lorem Ipsum
 Button_1756FD7D_31FA_0015_41C7_DA2AAC2AAAEC.label = Lorem Ipsum
 Button_159EDDDC_31FA_0014_419A_61C18E43FE01.label = Lorem Ipsum
 Button_1759A215_31FA_0014_41C7_F6B1044E5BB3.label = Lorem Ipsum
-Button_17560D7D_31FA_0015_41C4_7F0EC7540CC2.label = Lorem Ipsum
-Button_1759F215_31FA_0014_41BD_BBFA5FB0D882.pressedLabel = Lorem Ipsum
+Button_17598215_31FA_0014_41AC_1166AB319171.label = Lorem Ipsum
 Button_1759F215_31FA_0014_41BD_BBFA5FB0D882.label = Lorem Ipsum
+Button_1759F215_31FA_0014_41BD_BBFA5FB0D882.pressedLabel = Lorem Ipsum
 Button_1759D215_31FA_0014_41AD_B6C5744A0B97.label = Lorem Ipsum
 Button_17593215_31FA_0014_41C0_42BAFB0080F0.label = Lorem Ipsum
-Button_17562D7D_31FA_0015_41A3_96B282B30DBA.label = Lorem Ipsum
-Button_159E9DDC_31FA_0015_41B6_CB1D433C7673.label = Lorem Ipsum
-Button_17598215_31FA_0014_41AC_1166AB319171.label = Lorem Ipsum
+Button_159E8DDD_31FA_0014_41C5_F18F441AF371.label = Lorem Ipsum
+Button_17590215_31FA_0014_41C1_2B2D012DCC76.label = Lorem Ipsum
+Button_159ECDDC_31FA_0014_41B9_2D5AB1021813.label = Lorem Ipsum
 Button_159EEDDC_31FA_0014_41B6_22A86B2D2FEB.label = Lorem Ipsum
 Button_1758B215_31FA_0014_41BC_C4EAC2A9544B.label = Lorem Ipsum
-Button_15A12DDC_31FA_0014_416B_ED845741AE5F.label = Lorem Ipsum
+Button_15A12DDC_31FA_0014_416B_ED845741AE5F.pressedLabel = Lorem Ipsum
 Button_17EAB2B7_3106_0014_41A7_209417AD3E9A.label = Lorem Ipsum
 Button_17EAD2B7_3106_0014_41C0_0B5453B4841D.label = Lorem Ipsum
-Button_17EAE2B7_3106_0014_41C7_DB7FC43AAEE0.pressedLabel = Lorem Ipsum
 Button_17EAE2B7_3106_0014_41C7_DB7FC43AAEE0.label = Lorem Ipsum
+Button_17EAE2B7_3106_0014_41C7_DB7FC43AAEE0.pressedLabel = Lorem Ipsum
 Button_17EB02B7_3106_0014_41AF_05D9AC36B189.label = Lorem Ipsum
 Button_17EB32B7_3106_0014_41C8_467BF6AECBE8.label = Lorem Ipsum
-Button_17590215_31FA_0014_41C1_2B2D012DCC76.label = Lorem Ipsum
+Button_159E9DDC_31FA_0015_41B6_CB1D433C7673.label = Lorem Ipsum
 Button_17EB52B7_3106_0014_419C_439E593AEC43.label = Lorem Ipsum
 Button_17EB62B7_3106_0014_41C5_43B38271B353.label = Lorem Ipsum
 Button_17EB72B7_3106_0014_41B9_61857077BF4A.label = Lorem Ipsum
 Button_17EB92B7_3106_0014_41B2_34A3E3F63779.label = Lorem Ipsum
-Button_15A12DDC_31FA_0014_416B_ED845741AE5F.pressedLabel = Lorem Ipsum
+Button_15A12DDC_31FA_0014_416B_ED845741AE5F.label = Lorem Ipsum
 Button_168D6310_3106_01EC_41B8_A0B6BE627547.label = Lorem Ipsum
 Button_168D5310_3106_01EC_41B5_96D9387401B8.label = Lorem Ipsum
-Button_168D3310_3106_01EC_41AC_5D524E4677A5.pressedLabel = Lorem Ipsum
 Button_168D3310_3106_01EC_41AC_5D524E4677A5.label = Lorem Ipsum
+Button_168D3310_3106_01EC_41AC_5D524E4677A5.pressedLabel = Lorem Ipsum
 Button_168D2310_3106_01EC_41B8_9D7D1B2B55FA.label = Lorem Ipsum
 Button_168D0310_3106_01EC_41A1_FA8FC42E6FF3.label = Lorem Ipsum
 Button_17597215_31FA_0014_41C0_9BEE1DE4D7F6.label = Lorem Ipsum
@@ -133,8 +139,8 @@ Button_168D9311_3106_01EC_41A8_3BD8769525D6.label = Lorem Ipsum
 Button_17596215_31FA_0014_41C6_A42670770708.label = Lorem Ipsum
 Button_168DA310_3106_01EC_41BE_DF88732C2A28_mobile.label = Lorem Ipsum
 Button_15A13DDC_31FA_0014_41C5_41AE80876834.label = Lorem Ipsum
-Button_15A10DDC_31FA_0014_4185_021C898E177D.label = Lorem Ipsum
 Button_17565D7D_31FA_0015_4193_78BBCB2DC70F_mobile.label = Lorem Ipsum
+Button_15A10DDC_31FA_0014_4185_021C898E177D.label = Lorem Ipsum
 Button_13D4FC1E_310A_0017_41BA_DDA6D071C1BA.label = Lorem Ipsum
 Button_168D9311_3106_01EC_41A8_3BD8769525D6_mobile.label = Lorem Ipsum
 Button_17EB72B7_3106_0014_41B9_61857077BF4A_mobile.label = Lorem Ipsum
@@ -143,22 +149,22 @@ Button_168D5310_3106_01EC_41B5_96D9387401B8_mobile.label = Lorem Ipsum
 Button_17567D7D_31FA_0015_41C2_1E0D0AF05C7A_mobile.label = Lorem Ipsum
 Button_168DB310_3106_01EC_41B2_3511AA5E40E1_mobile.label = Lorem Ipsum
 Button_168DD310_3106_01EC_4190_7815FA70349E_mobile.label = Lorem Ipsum
+Button_168D3310_3106_01EC_41AC_5D524E4677A5_mobile.label = Lorem Ipsum
 Button_17566D7D_31FA_0015_41AD_98D7C60C694F_mobile.label = Lorem Ipsum
-Button_17EB52B7_3106_0014_419C_439E593AEC43_mobile.label = Lorem Ipsum
 Button_17EB92B7_3106_0014_41B2_34A3E3F63779_mobile.label = Lorem Ipsum
-Button_17EB32B7_3106_0014_41C8_467BF6AECBE8_mobile.label = Lorem Ipsum
+Button_17EB52B7_3106_0014_419C_439E593AEC43_mobile.label = Lorem Ipsum
 Button_168D0310_3106_01EC_41A1_FA8FC42E6FF3_mobile.label = Lorem Ipsum
-Button_1203FDB8_3106_001C_41B6_C9BE8EDD0DA9_mobile.pressedLabel = Lorem Ipsum
 Button_168D2310_3106_01EC_41B8_9D7D1B2B55FA_mobile.label = Lorem Ipsum
+Button_1203FDB8_3106_001C_41B6_C9BE8EDD0DA9_mobile.pressedLabel = Lorem Ipsum
 Button_13D4FC1E_310A_0017_41BA_DDA6D071C1BA_mobile.label = Lorem Ipsum
-Button_17560D7D_31FA_0015_41C4_7F0EC7540CC2_mobile.label = Lorem Ipsum
+Button_17562D7D_31FA_0015_41A3_96B282B30DBA_mobile.label = Lorem Ipsum
 Button_15A10DDC_31FA_0014_4185_021C898E177D_mobile.label = Lorem Ipsum
 Button_15A13DDC_31FA_0014_41C5_41AE80876834_mobile.label = Lorem Ipsum
-Button_15A12DDC_31FA_0014_416B_ED845741AE5F_mobile.pressedLabel = Lorem Ipsum
 Button_15A12DDC_31FA_0014_416B_ED845741AE5F_mobile.label = Lorem Ipsum
+Button_15A12DDC_31FA_0014_416B_ED845741AE5F_mobile.pressedLabel = Lorem Ipsum
 Button_159EDDDC_31FA_0014_419A_61C18E43FE01_mobile.label = Lorem Ipsum
 Button_159ECDDC_31FA_0014_41B9_2D5AB1021813_mobile.label = Lorem Ipsum
-Button_168D3310_3106_01EC_41AC_5D524E4677A5_mobile.label = Lorem Ipsum
+Button_168D3310_3106_01EC_41AC_5D524E4677A5_mobile.pressedLabel = Lorem Ipsum
 Button_159EEDDC_31FA_0014_41B6_22A86B2D2FEB_mobile.label = Lorem Ipsum
 Button_159E9DDC_31FA_0015_41B6_CB1D433C7673_mobile.label = Lorem Ipsum
 Button_159E8DDD_31FA_0014_41C5_F18F441AF371_mobile.label = Lorem Ipsum
@@ -166,34 +172,34 @@ Button_159EBDDD_31FA_0014_41C8_935504B30727_mobile.label = Lorem Ipsum
 Button_17EB62B7_3106_0014_41C5_43B38271B353_mobile.label = Lorem Ipsum
 Button_1757AD7D_31FA_0015_41C7_FB79F56FA149_mobile.label = Lorem Ipsum
 Button_1759F215_31FA_0014_41BD_BBFA5FB0D882_mobile.pressedLabel = Lorem Ipsum
-Button_17564D7D_31FA_0015_41B8_A9191CD56C52_mobile.pressedLabel = Lorem Ipsum
 Button_17564D7D_31FA_0015_41B8_A9191CD56C52_mobile.label = Lorem Ipsum
+Button_17564D7D_31FA_0015_41B8_A9191CD56C52_mobile.pressedLabel = Lorem Ipsum
 Button_1759D215_31FA_0014_41AD_B6C5744A0B97_mobile.label = Lorem Ipsum
-Button_17EB02B7_3106_0014_41AF_05D9AC36B189_mobile.label = Lorem Ipsum
+Button_17EB32B7_3106_0014_41C8_467BF6AECBE8_mobile.label = Lorem Ipsum
 Button_17593215_31FA_0014_41C0_42BAFB0080F0_mobile.label = Lorem Ipsum
+Button_17560D7D_31FA_0015_41C4_7F0EC7540CC2_mobile.label = Lorem Ipsum
 Button_17EAE2B7_3106_0014_41C7_DB7FC43AAEE0_mobile.pressedLabel = Lorem Ipsum
-Button_17562D7D_31FA_0015_41A3_96B282B30DBA_mobile.label = Lorem Ipsum
 Button_1756DD7D_31FA_0015_41A5_988B67FCF8B7_mobile.label = Lorem Ipsum
 Button_1756FD7D_31FA_0015_41C7_DA2AAC2AAAEC_mobile.label = Lorem Ipsum
-Button_17EAE2B7_3106_0014_41C7_DB7FC43AAEE0_mobile.label = Lorem Ipsum
+Button_17EB02B7_3106_0014_41AF_05D9AC36B189_mobile.label = Lorem Ipsum
 Button_1759A215_31FA_0014_41C7_F6B1044E5BB3_mobile.label = Lorem Ipsum
 Button_17598215_31FA_0014_41AC_1166AB319171_mobile.label = Lorem Ipsum
-Button_17590215_31FA_0014_41C1_2B2D012DCC76_mobile.label = Lorem Ipsum
 Button_1759F215_31FA_0014_41BD_BBFA5FB0D882_mobile.label = Lorem Ipsum
+Button_17597215_31FA_0014_41C0_9BEE1DE4D7F6_mobile.label = Lorem Ipsum
+Button_17596215_31FA_0014_41C6_A42670770708_mobile.label = Lorem Ipsum
+Button_17EAE2B7_3106_0014_41C7_DB7FC43AAEE0_mobile.label = Lorem Ipsum
+Button_1758B215_31FA_0014_41BC_C4EAC2A9544B_mobile.label = Lorem Ipsum
+Button_17590215_31FA_0014_41C1_2B2D012DCC76_mobile.label = Lorem Ipsum
 Button_17EAD2B7_3106_0014_41C0_0B5453B4841D_mobile.label = Lorem Ipsum
 Button_17EAB2B7_3106_0014_41A7_209417AD3E9A_mobile.label = Lorem Ipsum
-Button_17596215_31FA_0014_41C6_A42670770708_mobile.label = Lorem Ipsum
-Button_1758B215_31FA_0014_41BC_C4EAC2A9544B_mobile.label = Lorem Ipsum
-Button_17597215_31FA_0014_41C0_9BEE1DE4D7F6_mobile.label = Lorem Ipsum
-Button_168D3310_3106_01EC_41AC_5D524E4677A5_mobile.pressedLabel = Lorem Ipsum
+Button_17EB42B7_3106_0014_41B0_CE70CBDDF438.label = Lorem ipsum
 Button_168DE310_3106_01EC_4192_6A9F468A0ADE.label = Lorem ipsum
 Button_159EFDDC_31FA_0014_41C6_9CF7032F84E0_mobile.label = Lorem ipsum
-Button_17592215_31FA_0014_41B2_AA3B5CC318B8_mobile.label = Lorem ipsum
-Button_17EB42B7_3106_0014_41B0_CE70CBDDF438.label = Lorem ipsum
 Button_17561D7D_31FA_0015_41B5_BD72FAC26B8B.label = Lorem ipsum
 Button_168DE310_3106_01EC_4192_6A9F468A0ADE_mobile.label = Lorem ipsum
-Button_159EFDDC_31FA_0014_41C6_9CF7032F84E0.label = Lorem ipsum
 Button_17592215_31FA_0014_41B2_AA3B5CC318B8.label = Lorem ipsum
+Button_17592215_31FA_0014_41B2_AA3B5CC318B8_mobile.label = Lorem ipsum
+Button_159EFDDC_31FA_0014_41C6_9CF7032F84E0.label = Lorem ipsum
 Button_17EB42B7_3106_0014_41B0_CE70CBDDF438_mobile.label = Lorem ipsum
 Button_17561D7D_31FA_0015_41B5_BD72FAC26B8B_mobile.label = Lorem ipsum
 Button_2A2D853B_310E_001C_41C4_1C2E2BAFC35D.label = Main Entrance
@@ -204,10 +210,10 @@ Button_2A2C753B_310E_001C_41C4_B649CCC20E3D.label = Meeting Area 2
 Button_2A2C753B_310E_001C_41C4_B649CCC20E3D_mobile.label = Meeting Area 2
 Button_0B73474A_2D18_CB95_41B5_180037BA80BC.label = PRODUCTOS >
 Button_0B73474A_2D18_CB95_41B5_180037BA80BC_mobile.label = PRODUCTOS >
-Button_2A2C253B_310E_001C_41B6_D3A7F4F68C3E.pressedLabel = Reception
-Button_2A2C253B_310E_001C_41B6_D3A7F4F68C3E_mobile.label = Reception
 Button_2A2C253B_310E_001C_41B6_D3A7F4F68C3E.label = Reception
 Button_2A2C253B_310E_001C_41B6_D3A7F4F68C3E_mobile.pressedLabel = Reception
+Button_2A2C253B_310E_001C_41B6_D3A7F4F68C3E.pressedLabel = Reception
+Button_2A2C253B_310E_001C_41B6_D3A7F4F68C3E_mobile.label = Reception
 Button_0399826A_2D79_4594_41BA_934A50D0E6B4_mobile.label = TECNOLOGIA >
 Button_0399826A_2D79_4594_41BA_934A50D0E6B4.label = TECNOLOGÍA >
 Button_15F5A318_3106_001C_41C5_9AA2EF2184CF_mobile.label = Terrace
